Index fini, début de products html

--- a/tp1/CodeInitial/CodeInitial/products.html
+++ b/tp1/CodeInitial/CodeInitial/products.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Produits</title>
 </head>
+
 <body>
-<!-- TODO -->
+  <header>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="products.html">Produits</a>
+      <a href="contact.html">Contact</a>
+      <a href="panier.html">Panier</a>
+    </nav>
+  </header>
+  <main>
+    <aside>
+      <div id="categories">
+        <h3>Categories</h3>
+        <nav>
+          <button>Appareils photo</button>
+          <button>Consoles</button>
+          <button>Écrans</button>
+          <button>Ordinateurs</button>
+          <button>Tous les produits</button>
+        </nav>
+      </div>
+
+      <div id="classements">
+        <nav>
+          <button>Prix (bas - haut)</button>
+          <button>Prix (haut - bas)</button>
+          <button>Nom (A - Z)</button>
+          <button>Nom (Z - A)</button>
+        </nav>
+      </div>
+    </aside>
+    <section>
+      <h2>Produits</h2>
+      <h3>6 produits</h3>
+      <article></article>
+      <article></article>
+      <article></article>
+      <article></article>
+      <article></article>
+      <article></article>
+    </section>
+
+  </main>
+  <footer>
+    <h3>Équipe 210</h3>
+    <p>Myriam Kiriakos 1888929</p>
+    <p>Paul Clas 1846912</p>
+  </footer>
 </body>
+
 </html>
