Ajouter page contact, page produit individuel et liste produit

--- a/tp1/CodeInitial/CodeInitial/products.html
+++ b/tp1/CodeInitial/CodeInitial/products.html
@@ -20,35 +20,71 @@
     <aside>
       <div id="categories">
         <h3>Categories</h3>
-        <nav>
-          <button>Appareils photo</button>
-          <button>Consoles</button>
-          <button>Écrans</button>
-          <button>Ordinateurs</button>
-          <button>Tous les produits</button>
+        <nav id="productcategories">
+          <a>Appareils photo</a>
+          <a>Consoles</a>
+          <a>Écrans</a>
+          <a>Ordinateurs</a>
+          <a>Tous les produits</a>
         </nav>
       </div>
 
       <div id="classements">
-        <nav>
-          <button>Prix (bas - haut)</button>
-          <button>Prix (haut - bas)</button>
-          <button>Nom (A - Z)</button>
-          <button>Nom (Z - A)</button>
+        <h3>Classements</h3>
+        <nav id="productcriteria">
+          <a>Prix (bas-haut)</a>
+          <a>Prix (haut-bas)</a>
+          <a>Nom (A-Z)</a>
+          <a>Nom (Z-A)</a>
         </nav>
       </div>
     </aside>
     <section>
       <h2>Produits</h2>
       <h3>6 produits</h3>
-      <article></article>
-      <article></article>
-      <article></article>
-      <article></article>
-      <article></article>
-      <article></article>
+      <article>
+        <a href="product.html">
+          <h4>Camera 1</h4>
+          <figure><img src="assets/img/camera-1.png"></figure>
+          <h5>Prix : 200 $</h5>
+        </a>
+      </article>
+      <article>
+        <a href="product.html">
+          <h4>Camera 2</h4>
+          <figure><img src="assets/img/camera-2.png"></figure>
+          <h5>Prix : 250 $</h5>
+        </a>
+      </article>
+      <article>
+        <a href="product.html">
+          <h4>Camera 3</h4>
+          <figure><img src="assets/img/camera-3.png"></figure>
+          <h5>Prix : 275 $</h5>
+        </a>
+      </article>
+      <article>
+        <a href="product.html">
+          <h4>Laptop 1</h4>
+          <figure><img src="assets/img/laptop-1.png"></figure>
+          <h5>Prix : 700 $</h5>
+        </a>
+      </article>
+      <article>
+        <a href="product.html">
+          <h4>Laptop 2</h4>
+          <figure><img src="assets/img/laptop-2.png"></figure>
+          <h5>Prix : 1000 $</h5>
+        </a>
+      </article>
+      <article>
+        <a href="product.html">
+          <h4>Mac</h4>
+          <figure><img src="assets/img/mac.png"></figure>
+          <h5>Prix : 1200 $</h5>
+        </a>
+      </article>
     </section>
-
   </main>
   <footer>
     <h3>Équipe 210</h3>
