--- a/tp1/CodeInitial/CodeInitial/contact.html
+++ b/tp1/CodeInitial/CodeInitial/contact.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Contact</title>
 </head>
+
 <body>
-<!-- TODO -->
+  <header>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="products.html">Produits</a>
+      <a href="contact.html">Contact</a>
+      <a href="panier.html">Panier</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Page de contact</h2>
+    <address>
+      <a href="mailto: abc@gmail.com">Envoyez-nous un courriel</a><br><br>
+      <a href="tel:514-456-7890">514-456-7890 (appelez nous !)</a><br><br>
+      OnlineShop<br>
+      123 Sesame Rue<br>
+      Montreal, QC, a1b 2c3<br>
+    </address>
+  </main>
+  <footer>
+    <h3>Équipe 210</h3>
+    <p>Myriam Kiriakos 1888929</p>
+    <p>Paul Clas 1846912</p>
+  </footer>
 </body>
+
 </html>
