--- a/tp1/CodeInitial/CodeInitial/product.html
+++ b/tp1/CodeInitial/CodeInitial/product.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Produit</title>
 </head>
+
 <body>
-<!-- TODO -->
+  <h4>Camera 1</h4>
+  <figure><img src="assets/img/camera-1.png"></figure>
+  <p>Cette caméra permet de faire de jolies photos. Elle permet de faire des zooms avec une lentille spécialisé. Il y a
+    également l'option de faire des vidéos de hautes qualité grâce à cette caméra. </p>
+  <h5>Prix : 200 $</h5>
+  <ul>
+    <li>vient avec lentille pour zoom</li>
+    <li>permet de filmer en haute qualité</li>
+    <li>possède une ouverture usb pour transferer des photos</li>
+  </ul>
+  <form>
+    <label for="quantity">Quantité : </label>
+    <input type="number" id="quantity" value="1" name="quantity" min="1">
+    <button>Ajouter</button>
+  </form>
 </body>
+
 </html>
