Changer les valeurs des champs pour celles du json

--- a/tp1/CodeInitial/CodeInitial/product.html
+++ b/tp1/CodeInitial/CodeInitial/product.html
@@ -7,15 +7,16 @@
 </head>
 
 <body>
-  <h4>Camera 1</h4>
+  <h4>Canon EOS 5D Mark II</h4>
   <figure><img src="assets/img/camera-1.png"></figure>
-  <p>Cette caméra permet de faire de jolies photos. Elle permet de faire des zooms avec une lentille spécialisé. Il y a
-    également l'option de faire des vidéos de hautes qualité grâce à cette caméra. </p>
-  <h5>Prix : 200 $</h5>
+  <p>Le Canon EOS 5D Mark II est un appareil photographique reflex numérique à objectif interchangeable équipé d'un capteur 24×36 de 21 mégapixels, annoncé le 17 septembre 2008 et retiré du catalogue Canon japonais à la fin décembre 2012 puis du catalogue français à la mi-mars 2013. Il permet, pour la première fois sur ce type d'appareil, de filmer en vidéo HD 1080p (1920×1080 pixels). Canon a reçu, pour ce boîtier, le prix TIPA (Technical Image Press Association) du meilleur reflex « expert » en 2009. (<a href='https://fr.wikipedia.org/wiki/Canon_EOS_5D_Mark_II' target='_blank'>Wikipédia</a>) </p>
+  <h5>Prix : 2999.99 $</h5>
   <ul>
-    <li>vient avec lentille pour zoom</li>
-    <li>permet de filmer en haute qualité</li>
-    <li>possède une ouverture usb pour transferer des photos</li>
+    <li>Reflex numérique en alliage de magnésium à objectifs interchangeables de monture EF</li>
+    <li>Capteur CMOS avec matrice de Bayer (RVB) de 35,8 × 23,9 mm (format 24×36)</li>
+    <li>Processeur d'images DIGIC 4</li>
+    <li>21 millions de pixels. L'information de couleur est codée sur 14 bits</li>
+    <li>Ratio image 3:2</li>
   </ul>
   <form>
     <label for="quantity">Quantité : </label>
