--- a/tp1/CodeInitial/CodeInitial/products.html
+++ b/tp1/CodeInitial/CodeInitial/products.html
@@ -42,48 +42,50 @@
     <section>
       <h2>Produits</h2>
       <h3>6 produits</h3>
+      <section id="productslist">
       <article>
         <a href="product.html">
-          <h4>Camera 1</h4>
+          <h4>Canon EOS 5D Mark II</h4>
           <figure><img src="assets/img/camera-1.png"></figure>
-          <h5>Prix : 200 $</h5>
+          <h5>Prix : 2999.99 $</h5>
         </a>
       </article>
       <article>
         <a href="product.html">
-          <h4>Camera 2</h4>
+          <h4>Nikon D7000</h4>
           <figure><img src="assets/img/camera-2.png"></figure>
-          <h5>Prix : 250 $</h5>
+          <h5>Prix : 549.99 $</h5>
         </a>
       </article>
       <article>
         <a href="product.html">
-          <h4>Camera 3</h4>
+          <h4>Canon PowerShot SD1300</h4>
           <figure><img src="assets/img/camera-3.png"></figure>
-          <h5>Prix : 275 $</h5>
+          <h5>Prix : 299.99 $</h5>
         </a>
       </article>
       <article>
         <a href="product.html">
-          <h4>Laptop 1</h4>
+          <h4>Portable</h4>
           <figure><img src="assets/img/laptop-1.png"></figure>
-          <h5>Prix : 700 $</h5>
+          <h5>Prix : 699.99 $</h5>
         </a>
       </article>
       <article>
         <a href="product.html">
-          <h4>Laptop 2</h4>
+          <h4>Portable professionnel</h4>
           <figure><img src="assets/img/laptop-2.png"></figure>
-          <h5>Prix : 1000 $</h5>
+          <h5>Prix : 599.99 $</h5>
         </a>
       </article>
       <article>
         <a href="product.html">
-          <h4>Mac</h4>
+          <h4>iMac 27"</h4>
           <figure><img src="assets/img/mac.png"></figure>
-          <h5>Prix : 1200 $</h5>
+          <h5>Prix : 2299.99 $</h5>
         </a>
       </article>
+    </section>
     </section>
   </main>
   <footer>
