mis les boutons

--- a/tp1/CodeInitial/CodeInitial/products.html
+++ b/tp1/CodeInitial/CodeInitial/products.html
@@ -21,21 +21,21 @@
       <div id="categories">
         <h3>Categories</h3>
         <nav id="productcategories">
-          <a>Appareils photo</a>
-          <a>Consoles</a>
-          <a>Écrans</a>
-          <a>Ordinateurs</a>
-          <a>Tous les produits</a>
+          <button>Appareils photo</button>
+          <button>Consoles</button>
+          <button>Écrans</button>
+          <button>Ordinateurs</button>
+          <button>Tous les produits</button>
         </nav>
       </div>
 
       <div id="classements">
         <h3>Classements</h3>
         <nav id="productcriteria">
-          <a>Prix (bas-haut)</a>
-          <a>Prix (haut-bas)</a>
-          <a>Nom (A-Z)</a>
-          <a>Nom (Z-A)</a>
+          <button>Prix (bas-haut)</button>
+          <button>Prix (haut-bas)</button>
+          <button>Nom (A-Z)</button>
+          <button>Nom (Z-A)</button>
         </nav>
       </div>
     </aside>
