--- a/tp1/CodeInitial/CodeInitial/product.html
+++ b/tp1/CodeInitial/CodeInitial/product.html
@@ -18,10 +18,10 @@
     <li>21 millions de pixels. L'information de couleur est codée sur 14 bits</li>
     <li>Ratio image 3:2</li>
   </ul>
-  <form>
+  <form action="#" >
     <label for="quantity">Quantité : </label>
-    <input type="number" id="quantity" value="1" name="quantity" min="1">
-    <button>Ajouter</button>
+    <input type="number" id="quantity" value="1" name="quantity" min="1" step="1" required>
+    <input type="submit" value="Ajouter">
   </form>
 </body>
 
