Page confirmation complété

--- a/tp1/CodeInitial/CodeInitial/confirmation.html
+++ b/tp1/CodeInitial/CodeInitial/confirmation.html
@@ -5,6 +5,23 @@
   <title>OnlineShop - Confirmation</title>
 </head>
 <body>
-<!-- TODO -->
+  <header>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="products.html">Produits</a>
+      <a href="contact.html">Contact</a>
+      <a href="shopping-cart.html">Panier</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Confirmation</h2>
+    <p>Votre commande a bien été complétée et enregistrée. Nous expédierons votre commande dans les prochaines 24 heures.</p>
+  </main>
+  <footer>
+    <h3>Équipe 210</h3>
+    <p>Myriam Kiriakos 1888929</p>
+    <p>Paul Clas 1846912</p>
+  </footer>
 </body>
 </html>
