Page panier complété

--- a/tp1/CodeInitial/CodeInitial/shopping-cart.html
+++ b/tp1/CodeInitial/CodeInitial/shopping-cart.html
@@ -5,6 +5,55 @@
   <title>OnlineShop - Panier</title>
 </head>
 <body>
-<!-- TODO -->
+  <header>
+    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="products.html">Produits</a>
+      <a href="contact.html">Contact</a>
+      <a href="shopping-cart.html">Panier</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Panier</h2>
+    <table>
+      <tr>
+        <th></th>
+        <th>Nom</th>
+        <th>Prix unitaire</th>
+        <th>Quantité</th>
+        <th>Prix</th>
+      </tr>
+      <tr>
+        <td><button>X</button></td>
+        <td><a href="product.html">Produit 1</a></td>
+        <td>2,00 $</td>
+        <td><button>-</button>1<button>+</button></td>
+        <td>2,00 $</td>
+      </tr>
+      <tr>
+        <td><button>X</button></td>
+        <td><a href="product.html">Produit 2</a></td>
+        <td>4,00 $</td>
+        <td><button>-</button>2<button>+</button></td>
+        <td>8,00 $</td>
+      </tr>
+      <tr>
+        <td><button>X</button></td>
+        <td><a href="product.html">Produit 3</a></td>
+        <td>5,00 $</td>
+        <td><button>-</button>2<button>+</button></td>
+        <td>10,00 $</td>
+      </tr>
+    </table>
+    <h4>Total: 20,00 $</h4>
+    <button>Vider le panier</button>
+    <a href="order.html">Commander</a>
+  </main>
+  <footer>
+    <h3>Équipe 210</h3>
+    <p>Myriam Kiriakos 1888929</p>
+    <p>Paul Clas 1846912</p>
+  </footer>
 </body>
 </html>
