--- a/tp1/CodeInitial/CodeInitial/products.html
+++ b/tp1/CodeInitial/CodeInitial/products.html
@@ -13,7 +13,7 @@
       <a href="index.html">Accueil</a>
       <a href="products.html">Produits</a>
       <a href="contact.html">Contact</a>
-      <a href="panier.html">Panier</a>
+      <a href="shopping-cart.html">Panier</a>
     </nav>
   </header>
   <main>
