Modification du tel avec +1 pour num de pays + Modif index

--- a/tp1/CodeInitial/CodeInitial/contact.html
+++ b/tp1/CodeInitial/CodeInitial/contact.html
@@ -13,14 +13,14 @@
       <a href="index.html">Accueil</a>
       <a href="products.html">Produits</a>
       <a href="contact.html">Contact</a>
-      <a href="panier.html">Panier</a>
+      <a href="shopping-cart.html">Panier</a>
     </nav>
   </header>
   <main>
     <h2>Page de contact</h2>
     <address>
       <a href="mailto: abc@gmail.com">Envoyez-nous un courriel</a><br><br>
-      <a href="tel:514-456-7890">514-456-7890 (appelez nous !)</a><br><br>
+      <a href="tel:1-514-456-7890">1-514-456-7890 (appelez nous !)</a><br><br>
       OnlineShop<br>
       123 Sesame Rue<br>
       Montreal, QC, a1b 2c3<br>
