mis les produits du json

--- a/tp1/CodeInitial/CodeInitial/shopping-cart.html
+++ b/tp1/CodeInitial/CodeInitial/shopping-cart.html
@@ -26,27 +26,27 @@
       </tr>
       <tr>
         <td><button>X</button></td>
-        <td><a href="product.html">Produit 1</a></td>
-        <td>2,00 $</td>
+        <td><a href="product.html">Apple TV</a></td>
+        <td>249.99 $</td>
         <td><button>-</button>1<button>+</button></td>
-        <td>2,00 $</td>
+        <td>249.99 $</td>
       </tr>
       <tr>
         <td><button>X</button></td>
-        <td><a href="product.html">Produit 2</a></td>
-        <td>4,00 $</td>
+        <td><a href="product.html">Canon EOS 5D Mark II</a></td>
+        <td>2999.99 $</td>
         <td><button>-</button>2<button>+</button></td>
-        <td>8,00 $</td>
+        <td>5999.98 $</td>
       </tr>
       <tr>
         <td><button>X</button></td>
-        <td><a href="product.html">Produit 3</a></td>
-        <td>5,00 $</td>
+        <td><a href="product.html">Nikon D7000</a></td>
+        <td>549.99 $</td>
         <td><button>-</button>2<button>+</button></td>
-        <td>10,00 $</td>
+        <td>1099.98 $</td>
       </tr>
     </table>
-    <h4>Total: 20,00 $</h4>
+    <h4>Total: 7349.95 $</h4>
     <button>Vider le panier</button>
     <a href="order.html">Commander</a>
   </main>
