--- a/tp2/CodeInitial/index.html
+++ b/tp2/CodeInitial/index.html
@@ -5,24 +5,26 @@
   <meta charset="UTF-8">
   <title>OnlineShop - Accueil</title>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
   <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
     <nav>
-      <a href="index.html">Accueil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contact</a>
-      <a href="shopping-cart.html">Panier</a>
+      <a href="index.html" class="active nav_element">Accueil</a>
+      <a href="products.html" class="nav_element">Produits</a>
+      <a href="contact.html" class="nav_element">Contact</a>
+      <a href="shopping-cart.html" class="nav_element">Panier</a>
     </nav>
   </header>
   <main>
-    <h1>OnlineShop</h1>
-    <p>Bienvenue à notre boutique en ligne OnlineShop. Vous pouvez acheter tous nos produits directement ici.</p>
-    <a href="products.html">Achetez nos Produits</a>
-    <figure><img src="assets/img/home.png" alt="homepage image"></figure>
+    <img src="assets/img/home.png" alt="homepage image" id="homepage_img">
+    <h1>OnlineShop: le site no 1 pour vos achats en ligne ! </h1>
+    <p>Bienvenue à notre boutique en ligne OnlineShop. Vous pouvez acheter tous nos produits directement ici. </p>
+    
+    <a href="products.html" ><button class="btn">Achetez nos Produits</button></a>
+    
   </main>
   <footer>
     <h3>Équipe 210</h3>
