--- a/tp2/CodeInitial/products.html
+++ b/tp2/CodeInitial/products.html
@@ -12,10 +12,10 @@
   <header>
     <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
     <nav>
-      <a href="index.html">Accueil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contact</a>
-      <a href="shopping-cart.html">Panier</a>
+      <a href="index.html" class="nav_element">Accueil</a>
+      <a href="products.html" class="nav_element active">Produits</a>
+      <a href="contact.html" class="nav_element">Contact</a>
+      <a href="shopping-cart.html" class="nav_element">Panier</a>
     </nav>
   </header>
   <main>
