MK bon le footer was in the way, so je lai coller en bas, pour qu'il arrete detre dans le chemin

--- a/tp2/CodeInitial/products.html
+++ b/tp2/CodeInitial/products.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main>
-    <aside>
+    <aside id="lateral_bar">
       <div id="categories">
         <h3>Categories</h3>
         <nav id="productcategories">
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </aside>
-    <section>
+    <section id="main_panel">
       <h2>Produits</h2>
       <h3>6 produits</h3>
       <section id="productslist">
