MK float thingy

--- a/tp2/CodeInitial/products.html
+++ b/tp2/CodeInitial/products.html
@@ -42,8 +42,8 @@
       </div>
     </aside>
     <section id="main_panel">
-      <h2>Produits</h2>
-      <h3>6 produits</h3>
+      <p id="page_title">Produits</p>
+      <p id="num_products">6 produits</p>
       <section id="productslist">
         <article>
           <a href="product.html">
