MK les margins ...

--- a/tp2/CodeInitial/products.html
+++ b/tp2/CodeInitial/products.html
@@ -42,8 +42,8 @@
       </div>
     </aside>
     <section id="main_panel">
-      <p id="page_title">Produits</p>
-      <p id="num_products">6 produits</p>
+      <h2 id="page_title">Produits</h2>
+      <h3 id="num_products">6 produits</h3>
       <section id="productslist">
         <article>
           <a href="product.html">
