MK fini products

--- a/tp2/CodeInitial/products.html
+++ b/tp2/CodeInitial/products.html
@@ -49,42 +49,42 @@
           <a href="product.html">
             <h4>Canon EOS 5D Mark II</h4>
             <figure><img src="assets/img/camera-1.png"></figure>
-            <h5>Prix : 2999.99 $</h5>
+            <h5 class="product_price">Prix : 2999.99 $</h5>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Nikon D7000</h4>
             <figure><img src="assets/img/camera-2.png"></figure>
-            <h5>Prix : 549.99 $</h5>
+            <h5 class="product_price">Prix : 549.99 $</h5>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Canon PowerShot SD1300</h4>
             <figure><img src="assets/img/camera-3.png"></figure>
-            <h5>Prix : 299.99 $</h5>
+            <h5 class="product_price">Prix : 299.99 $</h5>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Portable</h4>
             <figure><img src="assets/img/laptop-1.png"></figure>
-            <h5>Prix : 699.99 $</h5>
+            <h5 class="product_price">Prix : 699.99 $</h5>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Portable professionnel</h4>
             <figure><img src="assets/img/laptop-2.png"></figure>
-            <h5>Prix : 599.99 $</h5>
+            <h5 class="product_price">Prix : 599.99 $</h5>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>iMac 27"</h4>
             <figure><img src="assets/img/mac.png"></figure>
-            <h5>Prix : 2299.99 $</h5>
+            <h5 class="product_price">Prix : 2299.99 $</h5>
           </a>
         </article>
       </section>
