--- a/tp2/OnlineShop/confirmation.html
+++ b/tp2/OnlineShop/confirmation.html
@@ -8,23 +8,30 @@
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
-    
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contact</a>
-      <a href="shopping-cart.html">Panier</a>
-    </nav>
+    <div>
+      <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
+      <nav>
+        <a class="active" href="index.html">Accueil</a>
+        <a href="products.html">Produits</a>
+        <a href="contact.html">Contact</a>
+        <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+            <i class="fa fa-shopping-cart fa-stack-1x"></i>
+          </span>
+          <span class="count">3</span>
+        </a>
+      </nav>
+    </div>
   </header>
   <main>
     <h2>Confirmation</h2>
     <p>Votre commande a bien été complétée et enregistrée. Nous expédierons votre commande dans les prochaines 24 heures.</p>
   </main>
   <footer>
-    <h3>Équipe 210</h3>
-    <p>Myriam Kiriakos 1888929</p>
-    <p>Paul Clas 1846912</p>
+    <div>
+      <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
+    </div>
   </footer>
 </body>
 </html>
