--- a/tp2/OnlineShop/shopping-cart.html
+++ b/tp2/OnlineShop/shopping-cart.html
@@ -8,13 +8,21 @@
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contact</a>
-      <a href="shopping-cart.html">Panier</a>
-    </nav>
+    <div>
+      <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
+      <nav>
+        <a class="active" href="index.html">Accueil</a>
+        <a href="products.html">Produits</a>
+        <a href="contact.html">Contact</a>
+        <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+            <i class="fa fa-shopping-cart fa-stack-1x"></i>
+          </span>
+          <span class="count">3</span>
+        </a>
+      </nav>
+    </div>
   </header>
   <main>
     <h2>Panier</h2>
@@ -53,9 +61,9 @@
     <a href="order.html">Commander</a>
   </main>
   <footer>
-    <h3>Équipe 210</h3>
-    <p>Myriam Kiriakos 1888929</p>
-    <p>Paul Clas 1846912</p>
+    <div>
+      <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
+    </div>
   </footer>
 </body>
 </html>
