en train de reparer le merge (? pquoi certaints trucs etaient delete?)

--- a/tp2/OnlineShop/order.html
+++ b/tp2/OnlineShop/order.html
@@ -48,7 +48,7 @@
         <label for="creditcardexpiry">Date d'expiration de la carte</label><br>
         <input type="text" id="creditcardexpiry" name="creditcardexpiry" placeholder="01/2021" pattern="[0-9]{2}/[0-9]{4}" required><br>
       </div>
-      <input type="submit" value="Payer">
+      <input type="submit" value="Payer" class="btn">
     </form>
   </main>
   <footer>
