--- a/tp2/OnlineShop/products.html
+++ b/tp2/OnlineShop/products.html
@@ -13,8 +13,8 @@
     <div>
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
       <nav>
-        <a class="active" href="index.html">Accueil</a>
-        <a href="products.html">Produits</a>
+        <a href="index.html">Accueil</a>
+        <a href="products.html" class="active" >Produits</a>
         <a href="contact.html">Contact</a>
         <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
           <span class="fa-stack fa-lg">
