--- a/tp2/OnlineShop/shopping-cart.html
+++ b/tp2/OnlineShop/shopping-cart.html
@@ -11,10 +11,10 @@
     <div>
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
       <nav>
-        <a class="active" href="index.html">Accueil</a>
+        <a href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
-        <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
+        <a class="shopping-cart" href="./shopping-cart.html" title="Panier" class="active" >
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
             <i class="fa fa-shopping-cart fa-stack-1x"></i>
