--- a/tp2/OnlineShop/index.html
+++ b/tp2/OnlineShop/index.html
@@ -25,12 +25,13 @@
       </nav>
     </div>
   </header>
-  <main>
-    <h1>OnlineShop</h1>
-    <p>Bienvenue à notre boutique en ligne OnlineShop. Vous pouvez acheter tous nos produits directement ici.</p>
-    <a href="products.html">Achetez nos Produits</a>
-    <figure><img src="assets/img/home.png" alt="homepage image"></figure>
-  </main>
+  <main>	
+    <img src="assets/img/home.png" alt="homepage image" id="homepage_img">	
+    <h1>OnlineShop: le site no 1 pour vos achats en ligne ! </h1>	
+    <p>Bienvenue à notre boutique en ligne OnlineShop. Vous pouvez acheter tous nos produits directement ici. </p>	
+    <a href="products.html" ><button class="btn">Achetez nos Produits</button></a>	
+    	
+  </main>	
   <footer>
     <div>
       <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
