--- a/tp2/OnlineShop/contact.html
+++ b/tp2/OnlineShop/contact.html
@@ -12,7 +12,7 @@
   <header>
     <div>
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
-      <nav>
+      <nav class="header_nav">
         <a class="active" href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
