--- a/tp2/OnlineShop/product.html
+++ b/tp2/OnlineShop/product.html
@@ -12,7 +12,7 @@
   <header>
     <div>
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
-      <nav>
+      <nav class="header_nav">
         <a  href="index.html">Accueil</a>
         <a href="products.html" class="active">Produits</a>
         <a href="contact.html">Contact</a>
