ATTENTION -> DÉTAILS À ARRANGER AVANT REMISE Page Confirmation, Contact, Order et Shopping cart finies

--- a/tp2/OnlineShop/confirmation.html
+++ b/tp2/OnlineShop/confirmation.html
@@ -11,7 +11,7 @@
     <div>
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
       <nav class="header_nav">
-        <a class="active" href="index.html">Accueil</a>
+        <a href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
         <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
@@ -25,8 +25,8 @@
     </div>
   </header>
   <main>
-    <h2>Confirmation</h2>
-    <p>Votre commande a bien été complétée et enregistrée. Nous expédierons votre commande dans les prochaines 24 heures.</p>
+    <h1>Votre commande est confirmée Myriam Kiriakos</h1>
+    <p>Votre numéro de confirmation est le <b>00001</b></p>
   </main>
   <footer>
     <div>
