--- a/tp2/OnlineShop/index.html
+++ b/tp2/OnlineShop/index.html
@@ -27,9 +27,9 @@
   </header>
   <main>	
     <img src="assets/img/home.png" alt="homepage image" id="homepage_img">	
-    <h1>OnlineShop: le site no 1 pour vos achats en ligne ! </h1>	
+    <h1>Le site no&deg;1 pour vos achats en ligne ! </h1>	
     <p>Bienvenue à notre boutique en ligne OnlineShop. Vous pouvez acheter tous nos produits directement ici. </p>	
-    <a href="products.html" ><button class="btn">Achetez nos Produits</button></a>	
+    <a href="products.html" ><button class="btn">Achetez nos Produits <span>&#187;</span> </button></a>	
     	
   </main>	
   <footer>
