--- a/tp2/OnlineShop/shopping-cart.html
+++ b/tp2/OnlineShop/shopping-cart.html
@@ -16,7 +16,7 @@
         <a href="index.html">Accueil</a>
         <a href="products.html">Produits</a>
         <a href="contact.html">Contact</a>
-        <a class="shopping-cart" href="./shopping-cart.html" title="Panier" class="active">
+        <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x fa-inverse active"></i>
             <i class="fa fa-shopping-cart fa-stack-1x active"></i>
