--- a/tp2/OnlineShop/products.html
+++ b/tp2/OnlineShop/products.html
@@ -14,7 +14,7 @@
       <a href="index.html"><img id="logo" src="assets/img/logo.svg" alt="logo"></a>
       <nav class="header_nav">
         <a href="index.html">Accueil</a>
-        <a href="products.html" class="active" >Produits</a>
+        <a href="products.html" class="active">Produits</a>
         <a href="contact.html">Contact</a>
         <a class="shopping-cart" href="./shopping-cart.html" title="Panier">
           <span class="fa-stack fa-lg">
@@ -29,18 +29,18 @@
   <main>
     <aside id="lateral_bar">
       <div id="categories">
-        <h3>Categories</h3>
+        <h4>Categories</h4>
         <nav id="productcategories">
           <button>Appareils photo</button>
           <button>Consoles</button>
           <button>Écrans</button>
           <button>Ordinateurs</button>
-          <button  class="selected">Tous les produits</button>
+          <button class="selected">Tous les produits</button>
         </nav>
       </div>
 
       <div id="classements">
-        <h3>Classements</h3>
+        <h4>Classements</h4>
         <nav id="productcriteria">
           <button class="selected">Prix (bas-haut)</button>
           <button>Prix (haut-bas)</button>
@@ -50,59 +50,61 @@
       </div>
     </aside>
     <section id="main_panel">
-      <h1 id="page_title">Produits</h1>
-      <h3 id="num_products">6 produits</h3>
+      <section id="product-listing-row">
+        <h2 id="page_title">Produits</h2>
+        <p id="num_products">6 produits</p>
+      </section>
       <section id="productslist">
         <article>
           <a href="product.html">
             <h4>Canon EOS 5D Mark II</h4>
-            <figure><img src="assets/img/camera-1.png"></figure>
-            <h5 class="product_price">Prix : 2999.99 $</h5>
+            <img src="assets/img/camera-1.png">
+            <p class="product_price"><small>Prix </small>2999.99 $</p>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Nikon D7000</h4>
-            <figure><img src="assets/img/camera-2.png"></figure>
-            <h5 class="product_price">Prix : 549.99 $</h5>
+            <img src="assets/img/camera-2.png">
+            <p class="product_price"><small>Prix </small>549.99 $</p>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Canon PowerShot SD1300</h4>
-            <figure><img src="assets/img/camera-3.png"></figure>
-            <h5 class="product_price">Prix : 299.99 $</h5>
+            <img src="assets/img/camera-3.png">
+            <p class="product_price"><small>Prix </small>299.99 $</p>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Portable</h4>
-            <figure><img src="assets/img/laptop-1.png"></figure>
-            <h5 class="product_price">Prix : 699.99 $</h5>
+            <img src="assets/img/laptop-1.png">
+            <p class="product_price"><small>Prix </small>699.99 $</p>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>Portable professionnel</h4>
-            <figure><img src="assets/img/laptop-2.png"></figure>
-            <h5 class="product_price">Prix : 599.99 $</h5>
+            <img src="assets/img/laptop-2.png">
+            <p class="product_price"><small>Prix </small>599.99 $</p>
           </a>
         </article>
         <article>
           <a href="product.html">
             <h4>iMac 27"</h4>
-            <figure><img src="assets/img/mac.png"></figure>
-            <h5 class="product_price">Prix : 2299.99 $</h5>
+            <img src="assets/img/mac.png">
+            <p class="product_price"><small>Prix </small>2299.99 $</p>
           </a>
         </article>
       </section>
     </section>
   </main>
-  <footer>
-    <div>
-      <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
-    </div>
-  </footer>
 </body>
+<footer>
+  <div>
+    <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
+  </div>
+</footer>
 
 </html>
