Fixed minor product page inconsistencies and fixed footer problem with clear:both !

--- a/tp2/OnlineShop/product.html
+++ b/tp2/OnlineShop/product.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <main>
-    <h3>Canon EOS 5D Mark II</h3>
+    <h1>Canon EOS 5D Mark II</h1>
     <div class="table">
       <figure id="product_img"><img src="assets/img/camera-1.png"></figure>
       <div class="product_info">
@@ -51,11 +51,11 @@
         </ul>
         <hr id="dotted_line">
         <div class="table">
-          <h5 id="price">Prix : 2999.99 $</h5>
+          <p id="price"><small>Prix: </small><strong>2999.99 $</strong></p>
           <form action="#" id="form_quantity">
             <label for="quantity">Quantité : </label>
-            <input class="form-control" type="number" id="quantity" value="1" name="quantity" min="1" step="1" required>
-            <input type="submit" value="Ajouter" class="btn">
+            <input class="form-control"  type="number" id="quantity" value="1" name="quantity" min="1" step="1" required size="300">
+            <input type="submit" value="Ajouter" class="btn" >
           </form>
         </div>
       </div>
