id remplacer par classe car il y a dupplication

--- a/tp2/OnlineShop/shopping-cart.html
+++ b/tp2/OnlineShop/shopping-cart.html
@@ -34,34 +34,34 @@
         <th>Produit</th>
         <th>Prix unitaire</th>
         <th>Quantité</th>
-        <th id="price-column">Prix</th>
+        <th class="price-column">Prix</th>
       </tr>
       <tr class="cart-table-row">
         <td><button><i class="fas fa-times"></i></button></td>
         <td><a href="product.html">Apple TV</a></td>
         <td>249.99 $</td>
         <td class="select"><button><i class="fas fa-minus"></i></button> 1 <button><i class="fas fa-plus"></i></button></td>
-        <td id="price-column">249.99 $</td>
+        <td class="price-column">249.99 $</td>
       </tr>
       <tr class="cart-table-row">
         <td><button><i class="fas fa-times"></i></button></td>
         <td><a href="product.html">Console Wii</a></td>
         <td>199.99 $</td>
         <td class="select"><button><i class="fas fa-minus"></i></button> 1 <button><i class="fas fa-plus"></i></button></td>
-        <td id="price-column">199.99 $</td>
+        <td class="price-column">199.99 $</td>
       </tr>
       <tr class="cart-table-row">
         <td><button><i class="fas fa-times"></i></button></td>
         <td><a href="product.html">Moniteur 19"</a></td>
         <td>149.99 $</td>
         <td class="select"><button><i class="fas fa-minus"></i></button> 1 <button><i class="fas fa-plus"></i></button></td>
-        <td id="price-column">149.99 $</td>
+        <td class="price-column">149.99 $</td>
       </tr>
     </table>
     <p id="sum">Total: <strong>599,97&thinsp;$</strong></p>
     <div class="order-buttons">
       <button class="btn"><i class="fa fa-trash" aria-hidden="true"></i> Vider le panier</button>
-      <a class="btn order-btn" href="./order.html">Commander <span>&#187;</a>
+      <a class="btn order-btn" href="./order.html">Commander <span>&#187;</span></a>
     </div>
   </main>
   <footer>
