--- a/tp3/Corrige/product.html
+++ b/tp3/Corrige/product.html
@@ -36,23 +36,19 @@
   </header>
   <main>
     <article>
-      <h1>Manette Xbox 360</h1>
+      <h1 id="product-name"></h1>
       <div class="row">
         <div class="col">
-          <img id="product-image" alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
+          <img id="product-image">
         </div>
         <div class="col">
           <section>
             <h2>Description</h2>
-            <p>Manette pouvant être branchée à une console Xbox 360 et un PC. Cette manette vous permettra de jouer à vos jeux vidéo préférés.
-            De plus, cette manette est sans fil et comporte un port pour casque d'écoute.</p>
+            <p id="product-desc"></p>
           </section>
           <section>
             <h2>Caractéristiques</h2>
-            <ul>
-              <li>Manette sans fil 2.4GHz avec adapteur USB</li>
-              <li>Compacte et ergonomique</li>
-              <li>Port pour casque d'écoute pour Xbox Live</li>
+            <ul id="product-features">
             </ul>
           </section>
           <hr>
@@ -63,7 +59,7 @@
               <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
             </button>
           </form>
-          <p>Prix: <strong>29,99&thinsp;$</strong></p>
+          <p>Prix: <strong id="product-price"></strong></p>
         </div>
       </div>
     </article>
