--- a/tp3/OnlineShop/index.html
+++ b/tp3/OnlineShop/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel="shortcut icon" src="./assets/img/favicon.ico">
   <meta charset="UTF-8">
   <title>OnlineShop - Accueil</title>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/scripts/Controllers/cartNotification.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
@@ -25,7 +28,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count">3</span>
+              <span class="count"></span>
             </a>
           </li>
         </ul>
@@ -41,7 +44,7 @@
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
   </footer>
   </body>
 </html>
