--- a/tp3/OnlineShop/product.html
+++ b/tp3/OnlineShop/product.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel="shortcut icon" src="./assets/img/favicon.ico">
   <meta charset="UTF-8">
   <title>OnlineShop - Produit</title>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/scripts/Controllers/cartNotification.js" type="module"></script>
+  <script src="./assets/scripts/Controllers/products.js" type="module"></script>
+  <script src="./assets/scripts/Controllers/product.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
@@ -25,7 +30,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count">3</span>
+              <span class="count"></span>
             </a>
           </li>
         </ul>
@@ -34,40 +39,37 @@
   </header>
   <main>
     <article>
-      <h1>Manette Xbox 360</h1>
+      <h1 id="product-name"></h1>
       <div class="row">
         <div class="col">
-          <img id="product-image" alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
+          <img id="product-image">
         </div>
         <div class="col">
           <section>
             <h2>Description</h2>
-            <p>Manette pouvant être branchée à une console Xbox 360 et un PC. Cette manette vous permettra de jouer à vos jeux vidéo préférés.
-            De plus, cette manette est sans fil et comporte un port pour casque d'écoute.</p>
+            <p id="product-desc"></p>
           </section>
           <section>
             <h2>Caractéristiques</h2>
-            <ul>
-              <li>Manette sans fil 2.4GHz avec adapteur USB</li>
-              <li>Compacte et ergonomique</li>
-              <li>Port pour casque d'écoute pour Xbox Live</li>
+            <ul id="product-features">
             </ul>
           </section>
           <hr>
-          <form class="pull-right">
+          <form id="add-to-cart-form" class="pull-right">
             <label for="product-quantity">Quantité:</label>
             <input class="form-control" id="product-quantity" type="number" value="1" min="1">
             <button class="btn" title="Ajouter au panier" type="submit">
               <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
             </button>
           </form>
-          <p>Prix: <strong>29,99&thinsp;$</strong></p>
+          <p id="product-price"></p>
         </div>
       </div>
+      <dialog id="dialog">Le produit à été ajouté au panier.</dialog>
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
   </footer>
 </body>
 </html>
