--- a/tp3/OnlineShop/products.html
+++ b/tp3/OnlineShop/products.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel="shortcut icon" src="./assets/img/favicon.ico">
   <meta charset="UTF-8">
   <title>OnlineShop - Produits</title>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
@@ -25,7 +26,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count">3</span>
+              <span class="count"></span>
             </a>
           </li>
         </ul>
@@ -37,20 +38,20 @@
       <section>
         <h2>Catégories</h2>
         <div class="btn-group vertical" id="product-categories">
-          <button>Appareils photo</button>
-          <button>Consoles</button>
-          <button>Écrans</button>
-          <button>Ordinateurs</button>
-          <button class="selected">Tous les produits</button>
+          <button id="cameras">Appareils photo</button>
+          <button id="consoles">Consoles</button>
+          <button id="screens">Écrans</button>
+          <button id="computers">Ordinateurs</button>
+          <button id="all">Tous les produits</button>
         </div>
       </section>
       <section>
         <h2>Classement</h2>
         <div class="btn-group vertical" id="product-criteria">
-          <button class="selected">Prix (bas-haut)</button>
-          <button>Prix (haut-bas)</button>
-          <button>Nom (A-Z)</button>
-          <button>Nom (Z-A)</button>
+          <button id="lowestHighest" class="selected">Prix (bas-haut)</button>
+          <button id="highestLowest">Prix (haut-bas)</button>
+          <button id="aToZ">Nom (A-Z)</button>
+          <button id="zToA">Nom (Z-A)</button>
         </div>
       </section>
     </section>
@@ -58,53 +59,14 @@
       <span class="right-header" id="products-count">13 produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Manette Xbox 360</h2>
-            <img alt="Manette Xbox 360" src="./assets/img/xbox-controller.png">
-            <p class="price"><small>Prix</small> 29,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Moniteur 19"</h2>
-            <img alt="Moniteur 19&quot;" src="./assets/img/monitor.png">
-            <p class="price"><small>Prix</small> 149,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Console Wii</h2>
-            <img alt="Console Wii" src="./assets/img/wii.png">
-            <p class="price"><small>Prix</small> 199,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Apple TV</h2>
-            <img alt="Apple TV" src="./assets/img/apple-tv.png">
-            <p class="price"><small>Prix</small> 249,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Canon PowerShot SD1300</h2>
-            <img alt="Canon PowerShot SD1300" src="./assets/img/camera-3.png">
-            <p class="price"><small>Prix</small> 299,99&thinsp;$</p>
-          </a>
-        </div>
-        <div class="product">
-          <a href="./product.html" title="En savoir plus...">
-            <h2>Console PS3</h2>
-            <img alt="Console PS3" src="./assets/img/ps3.png">
-            <p class="price"><small>Prix</small> 349,99&thinsp;$</p>
-          </a>
-        </div>
       </div>
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
   </footer>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/scripts/Controllers/products.js" type="module"></script>
+  <script src="./assets/scripts/Controllers/cartNotification.js" type="module"></script>
 </body>
 </html>
