--- a/tp3/OnlineShop/shopping-cart.html
+++ b/tp3/OnlineShop/shopping-cart.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel="shortcut icon" src="./assets/img/favicon.ico">
   <meta charset="UTF-8">
   <title>OnlineShop - Panier</title>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/scripts/Controllers/shoppingCart.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
@@ -25,7 +28,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count">3</span>
+              <span class="count"></span>
             </a>
           </li>
         </ul>
@@ -35,77 +38,45 @@
   <main>
     <article>
       <h1>Panier</h1>
-      <table class="table shopping-cart-table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Produit</th>
-            <th>Prix unitaire</th>
-            <th>Quantité</th>
-            <th>Prix</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Console Wii</a></td>
-            <td>199,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
+      <div id="shopping-cart-page">
+        <table class="table shopping-cart-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Produit</th>
+              <th>Prix unitaire</th>
+              <th>Quantité</th>
+              <th>Prix</th>
+            </tr>
+          </thead>
+          <tbody id="shopping-cart-content">
+            <tr>
+              <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
+              <td><a href="./product.html" id="product-name"></a></td>
+              <td id="product-price"></td>
+              <td>
+                <div class="row">
+                  <div class="col">
+                    <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
+                  </div>
+                  <div class="col" id="product-quantity"></div>
+                  <div class="col">
+                    <button title="Ajouter"><i class="fa fa-plus"></i></button>
+                  </div>
                 </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>199,99&thinsp;$</td>
-          </tr>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Manette Xbox 360</a></td>
-            <td>29,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
-                </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>59,98&thinsp;$</td>
-          </tr>
-          <tr>
-            <td><button title="Supprimer"><i class="fa fa-times"></i></button></td>
-            <td><a href="./product.html">Moniteur 19"</a></td>
-            <td>149,99&thinsp;$</td>
-            <td>
-              <div class="row">
-                <div class="col">
-                  <button title="Retirer" disabled=""><i class="fa fa-minus"></i></button>
-                </div>
-                <div class="col">1</div>
-                <div class="col">
-                  <button title="Ajouter"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </td>
-            <td>449,97&thinsp;$</td>
-          </tr>
-        </tbody>
-      </table>
-      <p class="shopping-cart-total">Total: <strong>704,94&thinsp;$</strong></p>
-      <a class="btn pull-right" href="./order.html">Commander <i class="fa fa-angle-double-right"></i></a>
-      <button class="btn"><i class="fa fa-trash-o"></i>&nbsp; Vider le panier</button>
+              </td>
+              <td class="price"></td>
+            </tr>
+          </tbody>
+        </table>
+        <p class="shopping-cart-total" id="total-amount")></strong></p>
+        <a class="btn pull-right" href="./order.html">Commander <i class="fa fa-angle-double-right"></i></a>
+        <button class="btn" id="remove-all-items-button"><i class="fa fa-trash" aria-hidden="true"></i> </i>&nbsp; Vider le panier</button>
+      </div>
     </article>
   </main>
   <footer>
-    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
+    <p>Équipe 210 - Myriam Kiriakos 1888929 et Paul Clas 1846912</p>
   </footer>
 </body>
 </html>
